# rust-intervals

./: Cargo.toml
idx/: Cargo.toml
idx-dsl/: Cargo.toml
idx-dsl-test/: Cargo.toml
idx-dsl-test/src/: lib.rs
idx-dsl/src/: hygiene.rs  idx.rs  index_trait.rs  lib.rs  offset.rs  ops.rs  seq.rs  wrap_type.rs
idx-types/: Cargo.toml
idx-types/src/: lib.rs
idx/src/: index.rs  macros.rs  rmq.rs  wrapper.rs
src/: experiments.rs  index.rs  index_macros.rs  interval.rs  lib.rs  macros.rs  main.rs  ops.rs  ops_macros.rs  range.rs  rmq.rs  sequences.rs  wrapper.rs
