[package]
name = "idx-dsl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
idx-types = { path = "../idx-types" }
syn = { version = "1.0.86", features = ["full", "parsing", "proc-macro", "extra-traits"] }
proc-macro2 = "1.0.36"
quote = "1.0.15"
proc-macro-crate = "1.1.0"

